<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">1337walls</string>
    <string name="source_name">1337walls</string>
    <string name="source_description">Wallpapers from 1337walls.w8l.org</string>
    <string name="share_artwork">Share artwork</string>
    <string name="save_artwork">Save artwork</string>

    <!-- preferences -->
    <string name="prefs_title">Settings</string>

    <string name="prefs_header_general">General</string>
    <string name="prefs_header_about">About</string>

    <string name="pref_cyclemode_key" translatable="false">pref_cyclemode</string>
    <string name="pref_cyclemode_title">Random wallpaper</string>
    <string name="pref_cyclemode_summary__true">Shows a random wallpaper from 1337walls.w8l.org for a adjustable period of time.</string>
    <string name="pref_cyclemode_summary__false">Shows the latest wallpaper from 1337walls.w8l.org (Every 3 hours)</string>

    <string name="pref_intervalpicker_key" translatable="false">pref_intervalpicker</string>
    <string name="pref_intervalpicker_title">Update interval</string>
    <string name="pref_intervalpicker_defaultvalue" translatable="false">60</string>

    <string name="pref_wifiswitch_key" translatable="false">pref_wifiswitch</string>
    <string name="pref_wifiswitch_title">Only update on Wi-Fi</string>
    <string name="pref_wifiswitch_summary">Updating on Wi-Fi helps to reduce mobile data usage.</string>

    <string name="pref_about_key" translatable="false">pref_about</string>
    <string name="pref_about_summary">Manuel Wildauer \n@int9h</string>
</resources>
